2011-10-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* latex/examples/testdoc.tex: Correct font names.

2011-10-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add preliminary LaTeX fonts generation

	* configure.ac:
	  - Add --enable-latex, --with-texmfdir configure options.
	  - Add checks for TeX font tools.
	* configure.ac, Makefile.am, +latex/:
	  - Add latex/ subdir.
	* +latex/Makefile.am, +latex/fonts-arundina.sty,
	  +latex/ltharunsans.fd, +latex/ltharunmono.fd, +latex/ltharunserif.fd:
	  - Add LaTeX style & font descriptors.
	* latex/Makefile.am, +latex/texfont.mk.am arundina/Makefile.am:
	  - Add automake snippet for building TeX fonts
	  - Add it to font make rules
	* configure.ac, +latex/examples/, +latex/examples/Makefile.am,
	  +latex/examples/testdoc.tex:
	  - Add sample docs.

2011-10-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* arundina/*.sfd:
	  - Rename glyph variants in accordance with thailatex convention.

2011-10-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac:
	  - Fix default installation dir for Type1 fonts.

2011-10-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac:
	  - Remove X fonts utils checks, which are never used.

2011-10-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac:
	  - Post-release version suffix added
	  - Add bug report address

2011-03-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* NEWS, configure.ac:
	  === Version 0.1.2 ===

2011-03-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* arundina/ArundinaSerif*.sfd:
	  - Set last liga component of RUEE and LUEE to LAKKHANGYAO (U+0E45),
	    not SARA AA (U+0E32)
	  - Bump font version to 2.22

2011-03-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* arundina/ArundinaSansMono*.sfd:
	  - Set last liga component of RUEE and LUEE to LAKKHANGYAO (U+0E45),
	    not SARA AA (U+0E32)
	  - Remove duplicated (with wrong shape) glyphs for FONGMAN-FANNUU,