@@ -9,9 +9,9 @@ ltxmap_DATA = $(MAP)
 
 LTX_TTFFILES = $(FONTS:%=%.ttf)
 LTX_AFMFILES = $(FONTS:%=%.afm)
-LTX_TFMFILES = $(FONTS:%=%.tfm)
-LTX_RTFMFILES = $(FONTS:%=r%.tfm)
-LTX_VFFILES = $(FONTS:%=%.vf)
+LTX_TFMFILES = $(FONTS:%=%.tfm) $(SYNTH_FONTS:%=%.tfm)
+LTX_RTFMFILES = $(FONTS:%=r%.tfm) $(SYNTH_FONTS:%=r%.tfm)
+LTX_VFFILES = $(FONTS:%=%.vf) $(SYNTH_FONTS:%=%.vf)
 
 ltxttf_DATA = $(LTX_TTFFILES)
 
@@ -38,6 +38,16 @@ r%.tfm: %.afm
 	$(AWK) "BEGIN {show=0} /LIGTABLE/ {show=1} /CHARACTER/ {show=0} {if(show) print}" thailigs.vpl >> $$TMPFILE && \
 	$(AWK) "BEGIN {show=0} /CHARACTER/ {show=1} {if(show) print}" $*.vpl >> $$TMPFILE && \
 	mv $$TMPFILE $*.vpl
+
+r%_so.tfm: %.afm
+%_so.vpl: %.afm thailigs.vpl
+	$(AFM2TFM) $*.afm -v $*_so.vpl -T lthuni.enc -s .167 r$*_so.tfm \
+	| $(SED) "s/$$/ <$*.ttf/" >> $(MAP)
+	TMPFILE=`mktemp /tmp/tltx.XXXXXXXXX` && \
+	$(AWK) "BEGIN {show=1} /LIGTABLE/ {show=0} {if(show) print}" $*_so.vpl > $$TMPFILE && \
+	$(AWK) "BEGIN {show=0} /LIGTABLE/ {show=1} /CHARACTER/ {show=0} {if(show) print}" thailigs.vpl >> $$TMPFILE && \
+	$(AWK) "BEGIN {show=0} /CHARACTER/ {show=1} {if(show) print}" $*_so.vpl >> $$TMPFILE && \
+	mv $$TMPFILE $*_so.vpl
 
 %.tfm: %.vpl
 	$(VPTOVF) $*
